# Autonomous-Operational-Intelligence-Agent

./: .env  .env.example  .gitignore  README.md  blueprint.md  docker-compose.yml  package-lock.json  package.json
.idx/: dev.nix
backend/: package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
download/components/: AIAnalysisPanel.jsx  AgentIntegration.jsx  CompanyDataInput.jsx  DataVisualization.jsx  FileUploadSection.jsx
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
ml-engine/: pyproject.toml  requirements.txt  test_pipeline.py
ml-engine/app/: __init__.py  main.py
ml-engine/app/agents/: __init__.py  base_agent.py  detection_agent.py  knowledge_graph_agent.py  loss_estimation_agent.py  optimizer_agent.py  reasoning_agent.py
ml-engine/app/api/: __init__.py  analyze.py  asloa.py  chat.py  demo.py  detect.py  optimize.py  pipeline.py
ml-engine/app/asloa/: __init__.py  orchestrator.py
ml-engine/app/asloa/agents/: __init__.py  analytics_agent.py  crm_sync_agent.py  lead_scoring_agent.py  outreach_agent.py  qualification_agent.py  research_agent.py  routing_agent.py
ml-engine/app/models/: __init__.py  input_schemas.py  output_schemas.py
ml-engine/app/orchestrator/: __init__.py  aoia_orchestrator.py  autonomy_modes.py
ml-engine/app/services/: __init__.py  anomaly_detector.py  loss_calculator.py  root_cause_analyzer.py
ml-engine/demos/: __init__.py  asloa_demo.py  bpo_demo.py
shared/: index.js  package.json
src/: App.css  App.jsx  agentic-service.js
(+23 files in other folders)
